# OPC-UA_ws

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  memo.md  open62541_ws.sln
doc/: Linux_dev_memo.md  Windows10_dev_memo.md
lib/: open62541.lib
lib/cmake/open62541/: open62541ConfigVersion.cmake
src/: AddMethodToObject.c  AddVariableToAServer.c  CMakeLists.txt
src/AddMethodsToObject/: AddMethodsToObject.vcxproj  main.cpp
src/DeclareVariables/: AddVar.cpp  AddVar.h  DeclareVariables.vcxproj  DeclareVariables.vcxproj.filters  main.cpp
src/pubsub/tutorial_publisher/: tutorial_publisher.cpp  tutorial_publisher.vcxproj  tutorial_publisher.vcxproj.filters
src/test/: test.cpp  test.vcxproj
